[gd_scene load_steps=10 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://sprites/male_bat.png" type="Texture" id=2]
[ext_resource path="res://sprites/male_torso.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://sprites/male_hand_shoulder.png" type="Texture" id=5]
[ext_resource path="res://sprites/male_hand_arm.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 28.4963
height = 96.5473

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 13.6981

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 16.5666
height = 73.7111

[node name="player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 3
mode = 2
mass = 2.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="bottom" type="Position2D" parent="."]

transform/pos = Vector2( 0, 78 )

[node name="max_arm_length" type="Position2D" parent="."]

transform/pos = Vector2( -57.9744, -0.00195313 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="mace_joint" type="PinJoint2D" parent="."]

transform/pos = Vector2( -58, -13 )
node_a = NodePath("../mace_joint_base")
node_b = NodePath("../mace")
bias/bias = 0.9
collision/exclude_nodes = true
softness = 0.0

[node name="mace_joint_base" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -58, -13 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="mace_joint_base"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="mace" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -57.8954, -79.8697 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.360825, 24.2351 )
shapes/0/trigger = false
collision/layers = 1024
collision/mask = 1
mode = 0
mass = 2.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="mace"]

transform/pos = Vector2( -0.360825, 24.2351 )
transform/scale = Vector2( 1, 1 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="mace"]

transform/pos = Vector2( -0.710342, 30.0523 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="body" type="Node2D" parent="."]

[node name="torso" type="Sprite" parent="body"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="head" type="Sprite" parent="body"]

transform/pos = Vector2( -3.80524, -53.1242 )
transform/scale = Vector2( 0.601321, 0.601321 )
texture = ExtResource( 4 )

[node name="arms" type="Node2D" parent="body"]

transform/pos = Vector2( 22, -21 )

[node name="shoulder" type="Sprite" parent="body/arms"]

transform/pos = Vector2( -0.50634, 0.908974 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
offset = Vector2( -26.6881, -1.25649 )

[node name="hand_arm" type="Sprite" parent="body/arms/shoulder"]

transform/pos = Vector2( -56.9195, 10.6099 )
texture = ExtResource( 6 )
offset = Vector2( -55.985, 0.106422 )


